# DataPilot

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  push_to_github.ps1  push_to_github.sh  pyproject.toml
cli/: __init__.py  __main__.py  display.py  main.py  runner.py
scripts/: build_index.py  dspy_optimize.py  gen_eval.py  generate_docs.py  generate_test_queries.py  init_db.py  init_sqlite.py  test_full_flow.py
src/datapilot/: __init__.py  main.py
src/datapilot/agents/: __init__.py  ambi_resolver.py  data_sniper.py  intent_classifier.py  judge.py  logic_architect.py  multi_judge.py  schema_graph.py  sql_fixer.py  vector_index.py  viz_expert.py
src/datapilot/api/: __init__.py  agents_routes.py  audit_routes.py  cache_routes.py  config_routes.py  cost_routes.py  dspy_routes.py  routes.py  system_routes.py  websocket.py
src/datapilot/cache/: __init__.py  semantic_cache.py
src/datapilot/config/: __init__.py  manager.py  settings.py
src/datapilot/core/: __init__.py  graph.py  llm_native_generator.py  parallel_executor.py  react_agent.py  state.py  supervisor.py  supervisor_react.py  user_preferences.py
src/datapilot/db/: __init__.py  config_generator.py  connector.py  metadata_config.py  schema_introspector.py
src/datapilot/llm/: __init__.py  cost_control.py  deepseek.py  embeddings.py
src/datapilot/llm/dspy_modules/: __init__.py  optimizer.py  self_evolution.py  signatures.py  sql_generator.py
src/datapilot/mcp/: __init__.py  base.py
src/datapilot/mcp/tools/: __init__.py  get_ddl.py  list_tables.py  plan_explain.py  read_only_query.py  search_values.py
src/datapilot/observability/: __init__.py  audit.py  metrics.py
src/datapilot/sandbox/: executor.py
src/datapilot/security/: __init__.py  auth.py  injection_guard.py  rate_limiter.py  sanitizer.py  security_middleware.py
src/datapilot/sql/: __init__.py  cost_analyzer.py  dialect.py  parser.py  validator.py
src/datapilot/utils/: __init__.py
src/datapilot/vector/: __init__.py  lancedb_store.py  qdrant_client.py  schema_index.py  value_index.py
